# app_test

./: .pre-commit-config.yaml  README.md  app.py  env.example  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: main_closecircle.yml
